tests/agl/rejections/type/duplicate_type_name.agl
record P
  n: int
record P
  t: text
